new commit - new updates projects and resume

--- a/khushaalsharma/src/Components/Styles.css
+++ b/khushaalsharma/src/Components/Styles.css
@@ -180,3 +180,16 @@ footer{
 .resumeDownload{
     margin: 2%;
 }
+
+.skill-icons i{
+    font-size: 300%;
+}
+
+.linkToOther{
+    color: blue;
+    cursor: pointer;
+}
+
+.linkToOther :hover{
+    color: darkblue !important;
+}
